とりあえず文字だけ下書き。画像は入れるとして、もうちょっと飾ったほうが良いかなぁ。説明向けの良い感じのテンプレート緩募。

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Comming soon
+<!doctype html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Untitled Document</title>
+</head>
+<body>
+<p>Blenderには実は3Dプリント用のAddOnが標準で付いています。まずは有効にしてみましょう。</p>
+<p>画像</p>
+<p>Export STLというボタンが有りますね。これを押すと【ファイル名】―【オブジェクト名】.stlでファイルがワンクリックで保存されます。</p>
+
+<p>Curaで読み込み、スライスしてチェックします。</p>
+
+<p>文字やトゲトゲの部分がうまくスライス出来なかったり、まぁ一発ではうまくいきませんよね・・・。ここからが3Dprint-Toolboxの本領発揮です。</p>
+<p>まずモデルを直します。</p>
+<p>修正したら3Dprint-ToolboxのExportを押します</p>
+<p>Curaでモデルを右クリックし、Reload Objectを選択します。</p>
+<p>Done!!修正したモデルが読み込まれます。</p>
+
+<p>数クリック節約出来る程度なのですが、終盤の細かい詰めの作業をしている時、これが意外と効いてきます。（カーソルの移動量も少ない）</p>
+<p>Cura側のReload Objectを自動化出来ないかな〜と考えていますが、対応は未定です＾＾；ではでは、快適な連携で楽しい3Dprintingライフを！</p>
+</body>
+</html>
