大体形になった。もう少し見栄え良くするか検討中。

--- a/index.html
+++ b/index.html
@@ -2,22 +2,41 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Untitled Document</title>
+    <title>BlenderとCuraで快速3Dプリントワークフロー</title>
 </head>
 <body>
-<p>Blenderには実は3Dプリント用のAddOnが標準で付いています。まずは有効にしてみましょう。</p>
-<p>画像</p>
-<p>Export STLというボタンが有りますね。これを押すと【ファイル名】―【オブジェクト名】.stlでファイルがワンクリックで保存されます。</p>
+    <h1>BlenderとCuraで快速3Dプリントワークフロー</h1>
+    <p>　Blenderには3Dプリント用のアドオンが標準で付いています。まずは有効化しましょう。【ファイル】→【ユーザー設定】の①アドオンタブを選択→②検索窓に3Dと入力→③フィルタされたアドオンの中に3D Print Toolboxというのが検索に引っかかるので、チェックを入れて有効にします。使い続けるなら④ユーザー設定の保存を忘れずに。</p>
+    <img src="img/setting.png" width="600">
+    <p>上記の手順で無事にチェックが付いたら、オブジェクトモード時に3Dプリンティングというタブが左側のパネルに追加されます。その横にエクスポートというボタンがいかにも押してほしそうにしてますね。早速押してエクスポート・・・といきたい所ですが、.blendファイルを保存していないと人間に厳しいエラーメッセージを吐いてくれます。まずはファイルを保存しましょう。保存後、エクスポートボタンを押すと【ファイル名】―【オブジェクト名】.stlというネーミングルールでstlファイルがワンクリックで強制的に上書き保存されます。</p>
+    <img src="img/3dprinttab.png" width="300" >
+    <p>あとは通常通りCuraでstlファイルを読み込み、スライスしてチェックします。</p>
+    <img src="img/nnw.png" width="600">
+    <p>文字やトゲトゲの部分がうまくスライス出来てなかったり、サポート材の付き方がいまいちだったり、まぁ一発ではうまくいきませんよね・・・。ここからが3D Print Toolboxの本領発揮です。手順は下記になります。</p>
+    <ol>
+        <li>モデルを修正</li>
+        <li>3D Print Toolboxのエクスポートを押す</li>
+        <li>Curaでモデルを右クリックし、Reload all objectsを選択</li>
+        <img src="img/nnw2.png" width="600">
+        <li>Done!! Cura上に修正されたオブジェクトが出現します</li>
+    </ol>
+    <p>これがもし3D Print Toolbox無しだと</p>
+    <ol>
+        <li>モデルを修正</li>
+        <li>メニューからファイルを選択</li>
+        <li>エクスポートにカーソルを合わせる</li>
+        <li>出てくるエクスポートの種類からstlを選択</li>
+        <li>ファイルの保存画面でSTLをエクスポートボタンを押す</li>
+        <li>Curaでモデルを右クリックし、Reload Objectを選択</li>
+        <li>Cura上に修正されたオブジェクトが出現</li>
+</ol>
 
-<p>Curaで読み込み、スライスしてチェックします。</p>
-
-<p>文字やトゲトゲの部分がうまくスライス出来なかったり、まぁ一発ではうまくいきませんよね・・・。ここからが3Dprint-Toolboxの本領発揮です。</p>
-<p>まずモデルを直します。</p>
-<p>修正したら3Dprint-ToolboxのExportを押します</p>
-<p>Curaでモデルを右クリックし、Reload Objectを選択します。</p>
-<p>Done!!修正したモデルが読み込まれます。</p>
-
-<p>数クリック節約出来る程度なのですが、終盤の細かい詰めの作業をしている時、これが意外と効いてきます。（カーソルの移動量も少ない）</p>
-<p>Cura側のReload Objectを自動化出来ないかな〜と考えていますが、対応は未定です＾＾；ではでは、快適な連携で楽しい3Dprintingライフを！</p>
+    <p>となります。節約出来のは3クリックなのですが、終盤の細かい詰めの作業をしている時、これが意外と効いてきます。やってみると分かりますが、カーソルの移動量もかなり違います。</p>
+    <p>私はCuraとSimplify3Dしか使わないのですが、リロードの下りは他のスライサでもできるかもしれません＾＾；</p>
+    <p>ではでは、快適な連携で楽しい3Dprintingライフを！</p>
+    <ul>Special Thanks!
+        <li>たかさごさん（このアドオン教えてくれました）</li>
+        <li>百鬼夜行さん（ののワさんモデル使わせてもらいました）</li>        
+    </ul>
 </body>
 </html>
