この断面で公開します

--- a/index.html
+++ b/index.html
@@ -6,37 +6,42 @@
 </head>
 <body>
     <h1>BlenderとCuraで快速3Dプリントワークフロー</h1>
-    <p>　Blenderには3Dプリント用のアドオンが標準で付いています。まずは有効化しましょう。【ファイル】→【ユーザー設定】の①アドオンタブを選択→②検索窓に3Dと入力→③フィルタされたアドオンの中に3D Print Toolboxというのが検索に引っかかるので、チェックを入れて有効にします。使い続けるなら④ユーザー設定の保存を忘れずに。</p>
+    <p><a href="http://www.adventar.org/calendars/833#list-2015-12-06">Blender Advent Calender 2015</a> 12月11日の記事です。</p>
+    <p>　Blenderには3Dプリント用のアドオンが標準で付いています。まずは有効化しましょう。（この記事を書いてる時点の私が使っているバージョンは2.76bですが、もうちょい前のバージョンから付いていました。）【ファイル】→【ユーザー設定】の①アドオンタブを選択→②検索窓に3Dと入力→③フィルタされたアドオンの中に3D Print Toolboxというのが検索に引っかかるので、チェックを入れて有効にします。使い続けるなら④ユーザー設定の保存を忘れずに。</p>
     <img src="img/setting.png" width="600">
-    <p>上記の手順で無事にチェックが付いたら、オブジェクトモード時に3Dプリンティングというタブが左側のパネルに追加されます。その横にエクスポートというボタンがいかにも押してほしそうにしてますね。早速押してエクスポート・・・といきたい所ですが、.blendファイルを保存していないと人間に厳しいエラーメッセージを吐いてくれます。まずはファイルを保存しましょう。保存後、エクスポートボタンを押すと【ファイル名】―【オブジェクト名】.stlというネーミングルールでstlファイルがワンクリックで強制的に上書き保存されます。</p>
+    <p>　上記の手順で無事にチェックが付いたら、オブジェクトモード時に3Dプリンティングというタブが左側のパネルに追加されます。その横にエクスポートというボタンがいかにも押してほしそうにしてますね。早速押してエクスポート・・・といきたい所ですが、.blendファイルを保存していないと人間に厳しいエラーメッセージを吐いてくれます。まずはファイルを保存しましょう。保存後、エクスポートボタンを押すと【ファイル名】―【オブジェクト名】.stlというネーミングルールでstlファイルがワンクリックで強制的に上書き保存されます。</p>
     <img src="img/3dprinttab.png" width="300" >
-    <p>あとは通常通りCuraでstlファイルを読み込み、スライスしてチェックします。</p>
+    <p>　あとは通常通りCuraでstlファイルを読み込み、スライスしてチェックします。</p>
     <img src="img/nnw.png" width="600">
-    <p>文字やトゲトゲの部分がうまくスライス出来てなかったり、サポート材の付き方がいまいちだったり、まぁ一発ではうまくいきませんよね・・・。ここからが3D Print Toolboxの本領発揮です。手順は下記になります。</p>
+    <p>　文字やトゲトゲの部分がうまくスライス出来てなかったり、サポート材の付き方がいまいちだったり、まぁ一発ではうまくいきませんよね・・・。ここからが3D Print Toolboxの本領発揮です。手順は下記になります。</p>
     <ol>
         <li>モデルを修正</li>
         <li>3D Print Toolboxのエクスポートを押す</li>
         <li>Curaでモデルを右クリックし、Reload all objectsを選択</li>
         <img src="img/nnw2.png" width="600">
-        <li>Done!! Cura上に修正されたオブジェクトが出現します</li>
+        <li>おしまい!! Cura上に修正されたオブジェクトが出現します</li>
     </ol>
-    <p>これがもし3D Print Toolbox無しだと</p>
+    <p>　これがもし3D Print Toolbox無しだと・・・</p>
     <ol>
         <li>モデルを修正</li>
         <li>メニューからファイルを選択</li>
         <li>エクスポートにカーソルを合わせる</li>
         <li>出てくるエクスポートの種類からstlを選択</li>
         <li>ファイルの保存画面でSTLをエクスポートボタンを押す</li>
-        <li>Curaでモデルを右クリックし、Reload Objectを選択</li>
+        <li>Curaでモデルを右クリックし、Reload all objectsを選択</li>
         <li>Cura上に修正されたオブジェクトが出現</li>
 </ol>
 
-    <p>となります。節約出来のは3クリックなのですが、終盤の細かい詰めの作業をしている時、これが意外と効いてきます。やってみると分かりますが、カーソルの移動量もかなり違います。</p>
-    <p>私はCuraとSimplify3Dしか使わないのですが、リロードの下りは他のスライサでもできるかもしれません＾＾；</p>
-    <p>ではでは、快適な連携で楽しい3Dprintingライフを！</p>
+    <p>　となります。節約出来るのは3クリックなのですが、終盤の細かい詰めの作業をしている時、これが意外と効いてきます。やってみると分かりますが、カーソルの移動量も結構違います。</p>
+    <p>　私はCuraとSimplify3Dしか使った事がないのですが、らくちんリロードは他のスライサでもできるかもしれません^^;ちなみにSimplify3Dではオブジェクトのリロードはまだ出来ない模様です。（<a href="https://forum.simplify3d.com/viewtopic.php?f=23&t=3621">Feature Requestに挙がっていました</a>）</p>
+    <p>　3D Print Toolboxは他にも色々便利なチェック機能があります。今回は割愛しますが、使いこなせばそこそこ力になってくれるでしょう。<a href="https://github.com/Ultimaker/Cura">CuraのGUI周りもPythonなので</a>、自分でもっと楽ちんな連携機能を組み込むのもありかも？？</p>
+    <p>　この記事は随時バージョンアップしていくつもりですが、なんか変なとこがあったら<a href="https://github.com/itosue/bl-cura_workflow">Pullリク投げてもらえればと。</a>ではでは快適な連携で楽しい3Dprintingライフを！</p>
+    <p>　さてBlender Advent Calenderもそろそろ折り返し。明日12/12（12揃いだ！）のBlender Advent Calenderは、<a href="https://twitter.com/kozmof">@kozmof</a>さんです！</p>
+    <hr>
+    <p>　#あとがき#　前々から使ってみたかったGithub Pagesで書いてみました。Bootstrapの良さげなテーマも探してみたのですけど、こういう記事向きなのはあまり見つからず・・・。（一個だけ見つけたけど、SphinxからExportして使う感じだった。）忙しい時期と重なっちゃって結局HTML直書き。ちょっと読み辛くてごみんね。</p>
     <ul>Special Thanks!
-        <li>たかさごさん（このアドオン教えてくれました）</li>
-        <li>百鬼夜行さん（ののワさんモデル使わせてもらいました）</li>        
+        <li><a href="https://twitter.com/tksg8086">たかさごさん</a>（このアドオンを教えてくれました）</li>
+        <li><a href="https://twitter.com/obake_100">百鬼夜行さん</a>（ののワさんモデル使わせてもらいました）</li>        
     </ul>
 </body>
 </html>
