--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>BlenderとCuraで快速3Dプリントワークフロー</title>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-71338769-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head>
+
 <body>
     <h1>BlenderとCuraで快速3Dプリントワークフロー</h1>
     <p><a href="http://www.adventar.org/calendars/833#list-2015-12-06">Blender Advent Calender 2015</a> 12月11日の記事です。</p>
