リストがどうしてもスマホから見るとはみ出るので直書きに

--- a/index.html
+++ b/index.html
@@ -26,25 +26,21 @@
     <img src="img/nnw.png" width="600">
     <p>　文字やトゲトゲの部分がうまくスライス出来てなかったり、サポート材の付き方がいまいちだったり、まぁ一発ではうまくいきませんよね・・・。ここからが3D Print Toolboxの本領発揮です。手順は下記になります。</p>
     <p> 
-        <ol>
-            <li>モデルを修正</li>
-            <li>3D Print Toolboxのエクスポートを押す</li>
-            <li>Curaでモデルを右クリックし、Reload all objectsを選択</li>
-            <img src="img/nnw2.png" width="600">
-            <li>おしまい!! Cura上に修正されたオブジェクトが出現します</li>
-        </ol>
+        1. モデルを修正<br>
+        2. 3D Print Toolboxのエクスポートを押す<br>
+        3. Curaでモデルを右クリックし、Reload all objectsを選択<br>
+        <img src="img/nnw2.png" width="600"><br>
+        4. おしまい!! Cura上に修正されたオブジェクトが出現します
     </p>
     <p>　これがもし3D Print Toolbox無しだと・・・</p>
     <p>
-        <ol>
-            <li>モデルを修正</li>
-            <li>メニューからファイルを選択</li>
-            <li>エクスポートにカーソルを合わせる</li>
-            <li>出てくるエクスポートの種類からstlを選択</li>
-            <li>ファイルの保存画面でSTLをエクスポートボタンを押す</li>
-            <li>Curaでモデルを右クリックし、Reload all objectsを選択</li>
-            <li>Cura上に修正されたオブジェクトが出現</li>
-        </ol>
+        1. モデルを修正<br>
+        2. メニューからファイルを選択<br>
+        3. エクスポートにカーソルを合わせる<br>
+        4. 出てくるエクスポートの種類からstlを選択<br>
+        5. ファイルの保存画面でSTLをエクスポートボタンを押す<br>
+        6. Curaでモデルを右クリックし、Reload all objectsを選択<br>
+        7. Cura上に修正されたオブジェクトが出現
     </p>
     
 
